--- a/port/css/style2.css
+++ b/port/css/style2.css
@@ -1,3 +1,5 @@
+
+
 /* layout */
 html {width: 100%; height: 100%; margin: 0; padding: 0;}
 #contents {}
@@ -100,32 +102,53 @@ html {width: 100%; height: 100%; margin: 0; padding: 0;}
 .sec2 {padding: 40vh 0;}
 .site-wrap {}
 .site-wrap .site {
+    padding-top: 35vh;
     margin-bottom: 30vh; 
     width: 100%; 
     overflow: hidden;
+    position: relative;
 }
-.site-wrap .site::before {
-    content: '01';
-    font-family: 'Ilisarniq-Black';
-}
-
+.site-wrap .site-num {
+    position: absolute; 
+    right: 0vw; top: 0vh;
+    font-size: 40vw;
+    line-height: 1;
+    text-transform: uppercase;
+    font-family: 'S-CoreDream-6Bold';
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke: 2px rgba(255,255,255,0.087);
+    letter-spacing: -6vw;
+} 
 .site-wrap .site-title {
     font-family: 'Ilisarniq-Black';
     font-size: 10vw;
     text-transform: uppercase;
-    color: #fff;
     padding-left: 10vw;
     letter-spacing: -0.5vw;
     position: relative; 
     z-index: 100;
+    position: absolute; left: 0; top: 6vh;
+    perspective: 500px;
+}
+.site-wrap .site-title span {
+    display: inline-block;
+    transform: translate(9%, 90%);
+}
+.site-wrap .site-title.t1 {
+    z-index: 10; color: #fff;
+}
+.site-wrap .site-title.t2 {
+    z-index: 50;
+    -webkit-text-stroke: 2px #fff;
+    -webkit-text-fill-color: transparent;
 }
 .site-wrap .site-img {
     padding-right: 30vw;
     margin-top: -12vh;
     overflow: hidden;
+    position: relative;
+    z-index: 20;
 }
-
-
 .site-wrap .site-intro {
     background: #fff;
     margin-left: 60vw;
@@ -140,12 +163,12 @@ html {width: 100%; height: 100%; margin: 0; padding: 0;}
     line-height: 1;
     text-transform: uppercase;
     font-family: 'Ilisarniq-Black';
-    padding-bottom: 1.5vw;
+    padding-bottom: 2vw;
 }
 .site-wrap .site-intro p {
     font-size: 18px;
-    font-family: 'S-CoreDream-3Light';
-    padding-bottom: 1.5vw;
+    font-family: 'NanumSquare';
+    padding-bottom: 2vw;
 }
 .site-wrap .site-intro .btn {
     display: flex; 
@@ -160,7 +183,7 @@ html {width: 100%; height: 100%; margin: 0; padding: 0;}
     display: inline-block;
     width: 49%;
     text-transform: uppercase;
-    padding: 0.6vw 1vw 0.8vw 1vw;
+    padding: 0.8vw 1vw 1vw 1vw;
     box-sizing: border-box;
     font-family: 'Ilisarniq-Light'; 
 }
