--- a/port/css/style5.css
+++ b/port/css/style5.css
@@ -16,7 +16,7 @@ html, body {
     overflow: hidden;
     height: 100vh;
 }
-#section1{
+#section1, #section2 {
     /* overflow-x: hidden; */
     overflow: hidden;
     padding-top: 300px;
@@ -265,24 +265,12 @@ h1.main-tit .split span {
 .btn-wrap a.rightBtn.movebg {
     color: #fff;
 }
-
-.container.codecontainer {
+#section1 .site-wrap .container {
     opacity: 0;
     padding-top: 300px;
 }
-.container.codecontainer.sec1-cc.opacity1 {
+#section1 .site-wrap .container.opacity1 {
     animation: opacity1 1s ease-in-out forwards;
-}
-@keyframes opacity1 {
-    0% {opacity: 0;}
-    100% {opacity: 1;}
-}
-.container.codecontainer.sec1-cc.opacity0 {
-    animation: opacity0 0.3s ease-in-out forwards;
-}
-@keyframes opacity0 {
-    0% {opacity: 1;}
-    100% {opacity: 0;}
 }
 .code-align-box {
     display: flex;
@@ -294,106 +282,55 @@ h1.main-tit .split span {
     width: 28%;
     height: 547px;
 }
-.sec1-circleAll:hover {
+.allcircle-wrap {
+    font-family: 'Ilisarniq-Regular';
+    font-size: 16px;
+    letter-spacing: 0.56px;
+    text-transform: uppercase;
+    color: #fff;
+    white-space: nowrap;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #12DA97;
+    border-radius: 50%;
+    transition: background .2s;
+}
+.allcircle-wrap:hover {
     color: #fff;
     background: #12DA97;
 }
-.sec1-circleAll.active2 {
+.allcircle-wrap.active2 {
     background: #12DA97;
 }
-.sec1-circleAll.circle-wrap1 {
+.circle-wrap1 {
     position: absolute; top: 5%; left: 7%;
-    font-family: 'Ilisarniq-Regular';
-    font-size: 16px;
-    letter-spacing: 0.56px;
-    text-transform: uppercase;
-    color: #fff;
-    white-space: nowrap;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 5.208vw; height: 5.208vw;
-    border: 2px solid #12DA97;
-    border-radius: 50%;
-    transition: background .2s;
 }
-.sec1-circleAll.circle-wrap1 .sec1-circle1 {
-    animation: sec1-c1 8s linear infinite;
+.circle-wrap1 .circle-txt1 {
+    animation: circlemove 8s linear infinite;
 }
-@keyframes sec1-c1 {
-    0% {transform: rotate(0deg);}
-    100% {transform: rotate(360deg);}
-}
-.sec1-circleAll.circle-wrap2 {
+.circle-wrap2 {
     position: absolute; top: 28%; left: 64%;
-    font-family: 'Ilisarniq-Regular';
-    font-size: 16px;
-    letter-spacing: 0.56px;
-    text-transform: uppercase;
-    color: #fff;
-    white-space: nowrap;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 7.083vw; height: 7.083vw;
-    border: 2px solid #12DA97;
-    border-radius: 50%;
-    transition: background .2s;
 }
-.sec1-circleAll.circle-wrap2 .sec1-circle2 {
-    animation: sec1-c2 4s linear infinite;
+.circle-wrap2 .circle-txt2 {
+    animation: circlemove 4s linear infinite;
 }
-@keyframes sec1-c2 {
-    0% {transform: rotate(0deg);}
-    100% {transform: rotate(-360deg);}
-}
-.sec1-circleAll.circle-wrap3 {
+.circle-wrap3 {
     position: absolute; top: 57%; left: 31%;
-    font-family: 'Ilisarniq-Regular';
-    font-size: 16px;
-    letter-spacing: 0.56px;
-    text-transform: uppercase;
-    color: #fff;
-    white-space: nowrap;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 3.333vw; height: 3.333vw;
-    border: 2px solid #12DA97;
-    border-radius: 50%;
-    transition: background .2s;
 }
-.sec1-circleAll.circle-wrap3 .sec1-circle3 {
-    animation: sec1-c3 7s linear infinite;
+.circle-wrap3 .circle-txt3 {
+    animation: circlemove 7s linear infinite;
 }
-@keyframes sec1-c3 {
-    0% {transform: rotate(0deg);}
-    100% {transform: rotate(-360deg);}
-}
-.sec1-circleAll.circle-wrap4 {
+.circle-wrap4 {
     position: absolute; top: 79%; left: 55%;
-    font-family: 'Ilisarniq-Regular';
-    font-size: 16px;
-    letter-spacing: 0.56px;
-    text-transform: uppercase;
-    color: #fff;
-    white-space: nowrap;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 5.208vw; height: 5.208vw;
-    border: 2px solid #12DA97;
-    border-radius: 50%;
-    transition: background .2s;
 }
-.sec1-circleAll.circle-wrap4 .sec1-circle4 {
-    animation: sec1-c4 15s linear infinite;
+.circle-wrap4 .circle-txt4 {
+    animation: circlemove 15s linear infinite;
 }
-@keyframes sec1-c4 {
-    0% {transform: rotate(0deg);}
-    100% {transform: rotate(360deg);}
-}
-
 .editorbox {
     position: relative;
     width: 72%;
@@ -475,10 +412,10 @@ h1.main-tit .split span {
     display: inline-block;
     text-align: center;
     /* width: 90px; */
-    width: 115px;
+    text-indent: 12px;
+    width: 100px;
 }
 .editor .editor-tab .theme .arrow {
-    /* margin-left: 10px; */
     position: absolute; top: 20%; right: 7%;
 }
 .editor .editor-tab .theme .arrow svg path {
@@ -488,9 +425,6 @@ h1.main-tit .split span {
     display: inline-block;
     transform: rotate(180deg);
 }
-/* .theme.re-rotate a.arrow svg {
-    transform: rotate(0deg);
-} */
 .editor .editor-tab .theme .themelist {
     width: 100%;
     position: absolute; top: 38px; left: -2px;
@@ -512,12 +446,6 @@ h1.main-tit .split span {
     display: inline-block;
     width: 12px;
 }
-/* .editor .editor-code {
-    border-bottom-left-radius: 5px; 
-    border-bottom-right-radius: 5px;
-    height: 507px; background: #282C34;
-} */
-
 .editor.owl .editor-tab {
     background: #01111D;
 }
@@ -592,6 +520,47 @@ h1.main-tit .split span {
 .editor.owlLight .editor-code {
     background: #fbfbfb;
 }
+
+
+
+
+
+
+/* section2 */
+#section2 .site-wrap .site-title {
+    position: absolute; top: -9vw; right: 10vw;
+}
+#section2 .site-title span {
+    transform: translate(-100px, 300px);
+}
+
+#section2 .img-align-box {
+    display: flex;
+    flex-direction: row-reverse;
+}
+#section2 .site-wrap .img-wrap {
+    background: #AA7F77;
+}
+#section2 .site-wrap .img-wrap.reveal {
+    animation: reveal_opacity 0.1s 1.1s forwards
+}
+#section2 .site-wrap .img-wrap.reveal::before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    z-index: 10;
+    background: #AA7F77;
+}
+#section2 .site-wrap .img-wrap.reveal-rtl.reveal::before {
+    animation: revealRTL 1.8s ease-in-out;
+}
+#section2 .site-wrap .img-wrap .imgframe {
+    background: url(../img/responsive_red.jpg);
+}
+
+
+
+
 
 
 /* mediaquery */
@@ -698,6 +667,10 @@ h1.main-tit .split span {
 
 
 /* animation */
+@keyframes circlemove {
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(360deg);}
+}
 @keyframes reveal_opacity {
     0% {opacity: 0;}
     100% {opacity: 1;}
@@ -706,4 +679,13 @@ h1.main-tit .split span {
     0% {width: 0; top: 0; left: 0;}
     65% {width: 100%; top: 0; left: 0;}
     100% {width: 0; top: 0; left: 100%;}
+}
+@keyframes revealRTL {
+    0% {width: 0; top: 0; right: 0;}
+    65% {width: 100%; top: 0; right: 0;}
+    100% {width: 0; top: 0; right: 100%;}
+}
+@keyframes opacity1 {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
 }
