--- a/port/css/style5.css
+++ b/port/css/style5.css
@@ -187,6 +187,7 @@ h1.main-tit .split span {
     
 }
 .site-desc-wrap {
+    position: absolute; top: 36vw; left: 60%;
     transition: width 1s, top 0.1s;
     /* width: 33.854vw; height: 24.583vw; */
     /* width: 650px; height: 472px; */
@@ -201,9 +202,6 @@ h1.main-tit .split span {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-}
-.site-desc-wrap {
-    position: absolute; top: 36vw; left: 60%;
 }
 .site-desc-wrap h2 {
     font-family: 'Ilisarniq-Black';
@@ -682,15 +680,21 @@ h1.main-tit .split span {
 #section4 .site-wrap .img-wrap.reveal {
     animation: reveal_opacity 0.1s 1.1s forwards
 }
-#section4 .site-wrap .img-wrap.reveal::before {
+#section4 .site-wrap .img-wrap.reveal::before,
+#section4 .site-wrap .img-wrap.reveal::after {
     content: '';
     position: absolute;
     height: 100%;
     z-index: 10;
+}
+#section4 .site-wrap .img-wrap.reveal::before {
+    animation: revealLTR 1.8s ease-in-out;
     background: #354763;
 }
-#section4 .site-wrap .img-wrap.reveal-ltr.reveal::before {
-    animation: revealLTR 1.8s ease-in-out;
+#section4 .site-wrap .img-wrap.reveal::after {
+    animation: revealLTR 1s 0.6s ease-in-out;
+    animation-delay: 0.5s;
+    background: #00daf2;
 }
 #section4 .site-wrap .img-wrap .imgframe {
     background: url(../img/ptdime_blue.jpg) center center no-repeat;
@@ -761,6 +765,43 @@ h1.main-tit .split span {
         font-size: 1.3vw;
         line-height: 2vw;
     }
+
+    /* section1 - 4 */
+    .site-wrap .img-wrap {
+        width: 73.917vw;
+        height: 41.542vw;
+    }
+    .site-wrap .site-num {
+        font-size: 22.625vw;
+    }
+    .site-desc-wrap {
+        left: 58%;
+        height: 430px;
+        padding: 3.427vw 3.385vw 3.688vw;
+    }
+}
+
+@media (max-width: 1125px){
+    /* section1 - 4 */
+    .site-desc-wrap {
+        width: 35.86%;
+        height: 380px;
+    }
+    .site-desc-wrap h2 {
+        font-size: 37px;
+    }
+    .site-desc-wrap p {
+        font-size: 14px;
+        line-height: 25px;
+    }
+    .btn-wrap a {
+        font-size: 17px;
+    }
+    .circlebox {
+        width: 24%;
+        margin: 0 2%;
+    }
+    
 }
 
 @media (max-width: 1040px){
@@ -788,10 +829,28 @@ h1.main-tit .split span {
     .header-title .desc br {
         display: none;
     }
+}
 
+@media (max-width: 1010px){
+    .header-title {
+        width: 78.4vw;
+    }
+    .header-title h1.main-tit {
+        font-size: 6.634vw;
+        line-height: 6.634vw;
+    }
 
-  
-
+    /* section1 - 4 */
+    .site-desc-wrap h2 {
+        font-size: 3.5vw;
+    }
+    .btn-wrap a {
+        height: 4vw;
+        font-size: 1.6vw;
+    }
+    .allcircle-wrap {
+        font-size: 14px;
+    }
 }
 
 @media (max-width: 800px){
@@ -829,6 +888,85 @@ h1.main-tit .split span {
 
     code[class*="language-"], pre[class*="language-"] {
         font-family: 'S-CoreDream-1Thin' !important;
+    }
+
+    /* section1 - 4 */
+    .site-wrap .img-wrap {
+        width: 94%;
+        height: 50vw;
+        margin: 0 3%;
+    }
+    .site-wrap .site-num {
+        top: -18vw;
+        right: 0px;
+        writing-mode: horizontal-tb;
+    }
+    .site-desc-wrap {
+        width: 94%;
+        margin: 0 3%;
+        position: unset;
+    }
+    .site-desc-wrap h2 {
+        font-size: 42px;
+        text-align: center;
+    }
+    .site-desc-wrap p {
+        font-size: 20px;
+        line-height: 34px;
+    }
+    .btn-wrap a {
+        font-size: 22px;
+        height: 48px;
+    }
+    .btn-wrap a.leftBtn span,
+    #section2 .btn-wrap a.leftBtn2 span,
+    #section3 .btn-wrap a.leftBtn3 span,
+    #section4 .btn-wrap a.leftBtn4 span {
+        position: relative;
+        z-index: 1;
+    }
+    .btn-wrap a.leftBtn::before,
+    #section2 .btn-wrap a.leftBtn2::before,
+    #section3 .btn-wrap a.leftBtn3::before,
+    #section4 .btn-wrap a.leftBtn4::before {
+        z-index: 0;
+    }
+    .site-wrap .container {
+        padding-top: 0px;
+    }
+    .code-align-box {
+        display: block;
+    }
+    .circlebox {
+        width: 96%;
+        height: 200px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .allcircle-wrap,
+    #section2 .allcircle-wrap, 
+    #section3 .allcircle-wrap, 
+    #section4 .allcircle-wrap {
+        position: unset;
+    }
+    .circle-wrap1,
+    .circle-wrap2, 
+    .circle-wrap3, 
+    .circle-wrap4,
+    #section2 .circle-wrap1,
+    #section2 .circle-wrap2,
+    #section2 .circle-wrap3,
+    #section3 .circle-wrap1,
+    #section3 .circle-wrap2,
+    #section3 .circle-wrap3,
+    #section4 .circle-wrap1,
+    #section4 .circle-wrap2,
+    #section4 .circle-wrap3 {
+        width: 13vw; height: 13vw;
+    }
+    .editorbox {
+        width: 100%;
     }
 
 }
