--- a/port/css/prism.css
+++ b/port/css/prism.css
@@ -248,12 +248,7 @@ pre[class*="language-"] {
 }
 
 
-
-
-
-
-
-
+/* common */
 pre[class*="language-"].line-numbers {
 	position: relative;
 	padding-left: 3.8em;
